# 1cup

./: .env.example  AGENTS.md  Makefile  README.md  deploy.sh  docker-compose.standalone.yml  docker-compose.yml  install.sh  start.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
backend/app/api/: __init__.py  cluster.py  databases.py  logs.py  servers.py  sessions.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py  router.py  service.py
backend/app/cache/: __init__.py  redis_client.py
backend/app/database/: __init__.py  models.py  schemas.py  session.py
backend/app/rac/: __init__.py  client.py  commands.py  parsers.py
backend/app/websocket/: __init__.py  hub.py
docs/: development-plan.xml  knowledge-graph.xml  requirements.xml  technology.xml
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/auth/: AuthContext.tsx  Login.tsx  PrivateRoute.tsx  index.ts
frontend/src/layout/: MainLayout.tsx
frontend/src/pages/: Dashboard.tsx  Databases.tsx  Logs.tsx  Servers.tsx  Sessions.tsx  Settings.tsx  index.ts
frontend/src/types/: index.ts
scripts/: dev.sh  healthcheck.sh  init.sh  install.sh  reconfigure.sh  stop.sh
